# idnet

./: .gitignore  download_dsec_test.py
idn/: eval.py
idn/config/: data_loader_base.yaml  tid_eval.yaml
idn/config/dataset/: dsec_base.yaml
idn/config/model/: id-8x.yaml
idn/config/validation/: dsec_test.yaml
idn/cuda_warp/: CMakeLists.txt  IOtest.py  __init__.py  cuda_utils.cu  cuda_utils.hpp  iwe_cuda.py  setup.py  warp_event.cpp
idn/loader/: loader_dsec.py  loader_mvsec.py
idn/model/: extractor.py  idedeq.py
idn/tests/: dsec.py  eval.py  test.py
idn/utils/: events2img.py  iwe.py  logger.py  loss_utils.py  model_utils.py  reconstruction.py  trainer.py  validation.py
